# dropclass

./: .gitignore  AGENTS.md  CONCEPTS.md  README.md  pyproject.toml
docs/: index.html
docs/assets/: project.css
docs/plans/: 2026-06-22-dropclass-mvp-plan.md
dropclass/: __init__.py
dropclass/api/: routes.py
dropclass/coursera/: __init__.py
dropclass/discovery/: classcentral.py
dropclass/formation/: store.py
notes/brainstorms/: 2026-06-22-dropclass-requirements.md
tests/: test_classcentral.py
