[project]
name = "dropclass"
version = "0.1.0"
description = "Agent formation engine — MOOC discovery and Coursera student loop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.49.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dropclass"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]